# dot

./: .envrc  .gitignore  .tasks  .tool-versions  BUILD.bazel  README.md  Taskfile.yml  dev_container.json  dotfiles.py  install.sh  install.yaml  install_termux.sh  jinja2  renovate.json5  requirements.lock.txt  requirements.txt  theme.ini  vimium-search-engines.txt
ansible/: install-github-release.yaml  install-termux.yaml  install-windows.yaml  install.yaml
install/: macos.sh
src/: .ideavimrc  .tool-versions  .zshenv  Taskfile.yaml
src/.config/: config.html.j2  greeter.txt  starship.toml.j2
src/.config/alacritty/: alacritty.toml.j2  alacritty.yml
src/.config/code/: extensions.json  keybindings.json.j2  settings.json
src/.config/fish/: config.fish
src/.config/fish/conf.d/: 00_asdf.fish  10_asdf.fish  11_brew.fish  30_flux_completion.fish  31_kubectl_completion.fish  32_fly_completion.fish  33_aspire.fish  34_git.fish  35_fnm.fish  40_asdf.fish  nx.fish
src/.config/fish/functions/: cert_download_pem.fish  gg.fish  (+9 more)
src/.config/fontconfigs/: fonts.conf
src/.config/ghostty/: config.ghostty
src/.config/i3/: config
src/.config/lazygit/: config.yml
src/.config/nvim/: ascii.txt  codeinit.lua  codeinit.vim  init.lua  startup.sh  test.sh  tests.lua
src/.config/polybar/: config.ini
src/.config/rofi/: ben-theme.rasi.j2  config.rasi
src/.config/tmux/: tmux.conf  tmux.conf.j2
src/.termux/: colors.properties.j2  termux.properties.j2
utility/: current_os.py  dict_util.py  dict_util_test.py  files.py  jinja_templates.py  logger.py  template_renderer.py
(+66 files in other folders)
